Fix font size on iphone

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -1,25 +1,4 @@
 // Here you can add other styles
-// body {
-//   font-size: 16px;
-// }
-// input[type="color"],
-// input[type="date"],
-// input[type="datetime"],
-// input[type="datetime-local"],
-// input[type="email"],
-// input[type="month"],
-// input[type="number"],
-// input[type="password"],
-// input[type="search"],
-// input[type="tel"],
-// input[type="text"],
-// input[type="time"],
-// input[type="url"],
-// input[type="week"],
-// select,
-// textarea {
-//   font-size: 16px !important;
-// }
 
 .displayInlineBlock {
   display: inline-block;
@@ -134,16 +113,35 @@
 
 // Small devices (landscape phones, 576px and up)
 @media (min-width: 576px) {
-
 }
 
 // Medium devices (tablets, 768px and up)
 @media (min-width: 768px) {
-
 }
 
 // Large devices (desktops, 992px and up)
 @media (max-width: 991px) {
+  body {
+    font-size: 16px;
+  }
+  input[type="color"],
+  input[type="date"],
+  input[type="datetime"],
+  input[type="datetime-local"],
+  input[type="email"],
+  input[type="month"],
+  input[type="number"],
+  input[type="password"],
+  input[type="search"],
+  input[type="tel"],
+  input[type="text"],
+  input[type="time"],
+  input[type="url"],
+  input[type="week"],
+  select,
+  textarea {
+    font-size: 16px !important;
+  }
   .sbtGroup {
     .item {
       margin-bottom: 10px;
@@ -153,6 +151,4 @@
 
 // Extra large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) {
-
 }
-
